--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:14:00 AM</p>
+    <p class="lastupdate">09/12/2020 01:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">53.1&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.2&#176;F</td>
+        <td class="data">44.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">69%</td>
+        <td class="data">72%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.943 inHg (-0.020)</td>
+        <td class="data">29.940 inHg (-0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             57.0</span><br/>
-          <span title="01:13:22 AM">
-            53.1</span>
+          <span title="01:17:38 AM">
+            52.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:13:22 AM" class="loval">
-            53.1</span>
+          <span title="01:17:38 AM" class="loval">
+            52.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:27 AM (Friday)" class="loval">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             29.951</span><br/>
-          <span title="01:04:00 AM">
-            29.941</span>
+          <span title="01:18:00 AM">
+            29.940</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          234
+          235
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 10 hours, 27 minutes</td>
+      <td class="data">10 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 10 hours, 27 minutes</td>
+      <td class="data">10 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
