--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:24:00 AM</p>
+    <p class="lastupdate">09/12/2020 01:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.942 inHg (-0.018)</td>
+        <td class="data">29.943 inHg (-0.019)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             57.0</span><br/>
-          <span title="01:21:14 AM">
-            52.7</span>
+          <span title="01:26:42 AM">
+            52.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:21:14 AM" class="loval">
-            52.7</span>
+          <span title="01:26:42 AM" class="loval">
+            52.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:27 AM (Friday)" class="loval">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 10 hours, 37 minutes</td>
+      <td class="data">10 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 10 hours, 37 minutes</td>
+      <td class="data">10 days, 10 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
