--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 03:19:00 AM</p>
+    <p class="lastupdate">09/12/2020 03:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.9&#176;F</td>
+        <td class="data">44.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">79%</td>
+        <td class="data">80%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.933 inHg (-0.016)</td>
+        <td class="data">29.936 inHg (-0.011)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="03:07:27 AM">
-            79</span><br/>
+          <span title="03:23:31 AM">
+            80</span><br/>
           <span title="01:00:00 AM">
             65</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">81%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 12 hours, 32 minutes</td>
+      <td class="data">10 days, 12 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 12 hours, 32 minutes</td>
+      <td class="data">10 days, 12 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
