--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 06:44:00 AM</p>
+    <p class="lastupdate">09/12/2020 06:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">45.9&#176;F</td>
+        <td class="data">45.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">45.9&#176;F</td>
+        <td class="data">45.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">45.9&#176;F</td>
+        <td class="data">45.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.0&#176;F</td>
+        <td class="data">41.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">83%</td>
+        <td class="data">85%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.949 inHg (0.014)</td>
+        <td class="data">29.948 inHg (0.014)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,32 +155,32 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             57.0</span><br/>
-          <span title="06:40:41 AM">
-            45.9</span>
+          <span title="06:44:37 AM">
+            45.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="06:40:41 AM (Saturday)">
-            45.9</span>
+          <span title="06:44:37 AM (Saturday)">
+            45.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/12/2020 06:40:41 AM">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM">
+            45.8</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/12/2020 06:40:41 AM">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM">
+            45.8</span>
         </td>
         <td class="data new_row hilo_rainyear">
           <span title="09/06/2020 04:04:42 PM">
             117.5</span><br/>
-          <span title="09/12/2020 06:40:41 AM">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM">
+            45.8</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -211,24 +211,24 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:40:41 AM" class="loval">
-            45.9</span>
+          <span title="06:44:37 AM" class="loval">
+            45.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="06:40:41 AM (Saturday)" class="loval">
-            45.9</span>
+          <span title="06:44:37 AM (Saturday)" class="loval">
+            45.8</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/12/2020 06:40:41 AM" class="loval">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM" class="loval">
+            45.8</span>
         </td>
         <td class="data new_row hilo_year">
-          <span title="09/12/2020 06:40:41 AM" class="loval">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM" class="loval">
+            45.8</span>
         </td>
         <td class="data new_row hilo_rainyear">
-          <span title="09/12/2020 06:40:41 AM" class="loval">
-            45.9</span>
+          <span title="09/12/2020 06:44:37 AM" class="loval">
+            45.8</span>
         </td>
         <td class="units">&#176;F</td>
       </tr>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 15 hours, 57 minutes</td>
+      <td class="data">10 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 15 hours, 57 minutes</td>
+      <td class="data">10 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
