--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 07:49:00 AM</p>
+    <p class="lastupdate">09/12/2020 07:54:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">46.5&#176;F</td>
+        <td class="data">46.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">46.5&#176;F</td>
+        <td class="data">46.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">46.5&#176;F</td>
+        <td class="data">46.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">41.9&#176;F</td>
+        <td class="data">42.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">84%</td>
+        <td class="data">83%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (0.027)</td>
+        <td class="data">29.964 inHg (0.031)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="07:38:01 AM">
-            29.964</span><br/>
+          <span title="07:49:01 AM">
+            29.966</span><br/>
           <span title="04:04:01 AM">
             29.931</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 17 hours, 2 minutes</td>
+      <td class="data">10 days, 17 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 17 hours, 2 minutes</td>
+      <td class="data">10 days, 17 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
