--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 09:14:00 AM</p>
+    <p class="lastupdate">09/12/2020 09:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">55.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">55.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">55.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.8&#176;F</td>
+        <td class="data">45.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">69%</td>
+        <td class="data">68%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.967 inHg (0.020)</td>
+        <td class="data">29.970 inHg (0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="09:09:01 AM">
-            29.970</span><br/>
+          <span title="09:16:01 AM">
+            29.972</span><br/>
           <span title="04:04:01 AM">
             29.931</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 18 hours, 27 minutes</td>
+      <td class="data">10 days, 18 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 18 hours, 27 minutes</td>
+      <td class="data">10 days, 18 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
