--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 09:39:00 AM</p>
+    <p class="lastupdate">09/12/2020 09:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.6&#176;F</td>
+        <td class="data">59.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.0&#176;F</td>
+        <td class="data">46.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.967 inHg (0.019)</td>
+        <td class="data">29.969 inHg (0.020)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">69.9&#176;F</td>
+        <td class="data">70.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:38:21 AM">
-            58.6</span><br/>
+          <span title="09:43:49 AM">
+            59.4</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:38:21 AM" class="hival">
-            58.6</span>
+          <span title="09:43:49 AM" class="hival">
+            59.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:42:56 AM">
+          <span title="09:41:37 AM">
             46.5</span><br/>
           <span title="06:40:41 AM">
             40.7</span>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="09:36:47 AM">
-            63</span>
+          <span title="09:41:55 AM">
+            62</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          309
+          307
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 18 hours, 52 minutes</td>
+      <td class="data">10 days, 18 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 18 hours, 52 minutes</td>
+      <td class="data">10 days, 18 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
